Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
 <p>Item Render 1.7.2 Edition</p>
 
+<p><a href="http://meow-j.github.io/Item-Render-1.7.2/">Project Website</a></p>
+
 <p><a href="https://github.com/Kobata/item-render">Original Project</a></p>
         </article>
       </div>
